--- a/v7.0/package.json
+++ b/v7.0/package.json
@@ -4,11 +4,8 @@
   "description": "An automatic beatmap generator using Tensorflow / Deep Learning.",
   "main": "load_map.js",
   "dependencies": {
-    "express": "^4.17.1",
-    "opn": "^6.0.0",
-    "osu-buffer": "^1.3.5",
-    "polynomial": "^1.4.3",
-    "regedit": "^3.0.3"
+    "adm-zip": "^0.4.16",
+    "polynomial": "^1.4.3"
   },
   "devDependencies": {},
   "scripts": {
